# dmx

./: .dockerignore  .gitignore  AGENTS.md  CHROMATIC_TREES.md  CLAUDE.md  Dockerfile  PROJECT_INDEX.json  README.md  REPO_STATUS.md  dmx_callback.py  dmx_cli.py  pyproject.toml  setup.py
.agents/governance/: portfolio-bridge.json
.github/workflows/: build-wheels.yml
_archive/legacy-notes/2026-04-22/: ARCHIVE_MANIFEST.md  temp_reply4.txt  temp_reply5.txt  temp_reply6.txt  temp_reply7.txt  temp_reply8.txt  tests_mode3_fix.txt
dmx/: cuda_native.py  delta_lossless.py
kernel/: __init__.py  build.py  dmx_kernels.cu  dmx_kernels_standalone.cu  dmx_kernels_v2.cu  dmx_standalone.cu
private_docs/: DMX_MANIFEST_SCHEMA.md  DMX_PRODUCT_TABLES_V2.md  M10_M23_COMPRESSION_RESULTS.md
tests/: test_fast_load.py
tests/fixtures/: legacy_pre_task_1_5.dmx
