[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmx-compress"
version = "1.1.0"
description = "Lossless compression for neural network weights. Bit-exact storage, content-addressable deltas, embedded provenance."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "William J. Riley", email = "bill.riley@gmail.com"},
]
keywords = ["compression", "neural-network", "model-compression", "checkpoint", "safetensors", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Archiving :: Compression",
]
dependencies = [
    "torch>=2.0",
    "numpy",
    "zstandard",
    "safetensors",
    # `packaging` is a runtime import inside safetensors.torch but is not
    # declared by safetensors as a requirement. Listing it explicitly here
    # ensures pip resolves it in fresh venvs where setuptools' vendored copy
    # is not exposed. Without this line, `pip install dmx-compress` in a
    # clean venv produces an installation that crashes at import time with
    # "ModuleNotFoundError: No module named 'packaging'". Caught during the
    # 0.4.0 PyPI publish smoke test.
    "packaging",
    # Adaptive per-tensor entropy coder selection picks the smallest output
    # from a candidate set per tensor. zstd is always available; soundfile and
    # brotli expand the candidate set. They are listed as required (not extras)
    # so a fresh `pip install dmx-compress` ships the full feature, not a
    # silently-degraded selector.
    "soundfile",
    "brotli",
]

[project.optional-dependencies]
gpu = ["torch>=2.0", "ninja"]

[project.urls]
Homepage = "https://github.com/willjriley/dmx"
Repository = "https://github.com/willjriley/dmx"
Issues = "https://github.com/willjriley/dmx/issues"

[project.scripts]
dmx = "dmx_cli:main"

[tool.setuptools]
py-modules = ["dmx_cli"]
