[build-system]
requires = ["setuptools>=68.0", "wheel", "torch>=2.0", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "dmx-compress"
version = "1.3.0"
description = "Lossless compression for neural network weights. Bit-exact storage, content-addressable deltas, embedded provenance."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "William J. Riley", email = "bill.riley@gmail.com"},
]
keywords = ["compression", "neural-network", "model-compression", "checkpoint", "safetensors", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Archiving :: Compression",
]
dependencies = [
    "torch>=2.0",
    "numpy",
    "zstandard",
    "safetensors",
    "packaging",
    "soundfile",
    "brotli",
]

[project.optional-dependencies]
gpu = ["torch>=2.0", "ninja"]

[project.urls]
Homepage = "https://github.com/willjriley/dmx"
Repository = "https://github.com/willjriley/dmx"
Issues = "https://github.com/willjriley/dmx/issues"

[project.scripts]
dmx = "dmx_cli:main"
